--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body * {
     -moz-text-align: center; /*works on Firefox */
     -webkit-text-align: center; /*works on Safari and Google Chrome*/
     text-align: center;
-    background-color: #eba4a4;
+    background-color: #d6aae1;
     -moz-padding: 20px; /*works on Firefox */
     -webkit-padding: 20px; /*works on Safari and Google Chrome*/
     padding: 20px;
@@ -77,7 +77,7 @@ body * {
   
   .html {
     width: 90%;
-    background-color: #046daa;
+    background-color: #78c1eb;
   }
   
   .w3-ul li {
